--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
+@import url('https://fonts.googleapis.com/css?family=Revalia');
+body {
+	background-image: url(https://static.pexels.com/photos/33968/pexels-photo.jpg);
+	background-size: cover;
+}
 .container {
 	padding: 15px;
+}
+h3 {
+	font-family: 'Revalia';
+	font-size: 28px;
+}
+.btn {
+	border: 2px solid #154c0b;
+}
+#js-newGameButton {
+	color: #154c0b;
+	cursor: pointer;
+	animation: buttonPulse 1s infinite;
+}
+#js-newGameButton:hover {
+	color: white;
+    background-color: #154c0b;
+}
+@keyframes buttonPulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.15);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+#js-resultsTableElement {
+	font-size: 20px;
+	font-weight: bold;
+	font-family: 'Revalia';
 }
