--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@
 body {
 	background-image: url(https://static.pexels.com/photos/33968/pexels-photo.jpg);
 	background-size: cover;
+	position: relative;
+}
+body:after {
+	content: "";
+	display: block;
+	position: fixed; 
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 10;
+	background-color: rgba(0,0,0,0.1);
 }
 .container {
 	padding: 15px;
