--- a/style.css
+++ b/style.css
@@ -4,16 +4,15 @@ body {
 	background-size: cover;
 	position: relative;
 }
-body:after {
-	content: "";
-	display: block;
-	position: fixed; 
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;
-	z-index: 10;
-	background-color: rgba(255,255,255,0.2);
+body:before {
+	position: fixed;
+	content:" ";	
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;	
+	z-index: -1;
+	background-color: rgba(255,255,255,0.4);
 }
 .container {
 	padding: 15px;
